js pop up issues

--- a/tricks/innnerHTML_documentWrite.html
+++ b/tricks/innnerHTML_documentWrite.html
@@ -1,14 +1,14 @@
 <html>
 	<head></head>
 	<body>
-		<div id='content'>
+<!-- 		<div id='content'>
 			<script language="javascript">
 				var str = "<style>#MyLi{width:310px;margin:0px;color:#ff0000;}</style><div><ul id='MyUl'><li id='MyLi'>dfsdfsfs</li></ul></div>";
 				document.write(str);
 				alert(str);
 				alert(document.getElementById("content").innerHTML);
 			</script>
-		</div>
+		</div> -->
 
 
 		<div id='contentInnerHtml'></div>
