--- a/tricks/backbone_eventBind_Trigger.html
+++ b/tricks/backbone_eventBind_Trigger.html
@@ -3,6 +3,7 @@
 		<script type="text/javascript" src="./libs/underscore.js"></script>
 		<script type="text/javascript" src="./libs/jquery-2.1.1.js"></script>
 		<script type="text/javascript" src="./libs/backbone.js"></script>
+		<script type="text/javascript" src="../common/libs/fastclick.js"></script>
 	</head>
 	<body>
 		<div id="body">
@@ -10,6 +11,8 @@
 				<div id='father' style="width:50px;height:50px;background-color:red;">
 					<div id="clild" style="width:30px;height:30px;background-color:green;"></div>	
 				</div>
+
+				<div><%=data%></div>
 		    </script>
 		</div>
 		<!-- <div id='father' style="width:50px;height:50px;background-color:red;">
@@ -19,9 +22,8 @@
 	<script type="text/javascript">
 		var TestView = Backbone.View.extend({  //  创建一个view，其实就是一个HTML的DOM节点
 			events: {
-				"click #clild": "clildAction",
-				"click #father": "fatherAction"
-				
+				"click #father": "fatherAction",
+				"click #clild": "clildAction"	
 			},
 
 		    initialize: function() {  
@@ -29,8 +31,11 @@
 		    },
 		    render: function() {  // 渲染方法
 		    	var tpl = '<div id="father" style="width:50px;height:50px;background-color:red;">'+
-					'<div id="clild" style="width:30px;height:30px;background-color:green;"></div></div>';
-		        this.$el.html(tpl/*this.$el.find("#backbone_tmp")*/);  //  this.el就是HTML节点，通过jQuery的html方法填充内容
+					'<div id="clild" style="width:30px;height:30px;background-color:green;"><%=data%></div></div>';
+				//var template = _.template(tpl)({data:"dataTest"});
+				var template = _.template(this.$el.find("#backbone_tmp").html())({data:"dataTest"});
+				this.$el.html(template);
+		       // this.$el.html(this.$el.find("#backbone_tmp").html());  //  this.el就是HTML节点，通过jQuery的html方法填充内容
 		        return this;
 		    },
 
@@ -39,7 +44,7 @@
 		    },
 
 		    clildAction : function(e){
-		    	alert("clild");
+		    	alert("child");
 		    	e.stopPropagation();
            		e.preventDefault();//阻止冒泡
 		    }
@@ -47,6 +52,7 @@
 		});
 
 		$(function () {
+			FastClick.attach(document.body);
 		    var v = new TestView({el: $('#body')});  //  以目标节点（一个 <div id="body" />）为el参数，创建一个view的实例，render函数将会被自动调用并将渲染结果填充到el中
 		    //v.render(); // 如果没在 initialize 里调用 render 的话，就需要在这里调用一次
 		});
