--- a/jsPerformanceCss/jsPerformance.html
+++ b/jsPerformanceCss/jsPerformance.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <LINK href="favicon.ico" type="image/x-icon" rel=icon>
+    </head>
 	<body>
     <script type="text/javascript">
         var s = document.body.style;
