--- a/ctrip/Golf/Webapp/backbone_eventBind_Trigger.html
+++ b/ctrip/Golf/Webapp/backbone_eventBind_Trigger.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<script type="text/javascript" src="./libs/underscore.js"></script>
-		<script type="text/javascript" src="./libs/jquery-2.1.1.js"></script>
-		<script type="text/javascript" src="./libs/backbone.js"></script>
-		<script type="text/javascript" src="../common/libs/fastclick.js"></script>
+		<script type="text/javascript" src="./res/libs/underscore.js"></script>
+		<script type="text/javascript" src="./res/libs/jquery-2.1.1.js"></script>
+		<script type="text/javascript" src="./res/libs/backbone.js"></script>
+		<script type="text/javascript" src="./res/libs/fastclick.js"></script>
 	</head>
 	<body>
 		<div id="body">
