--- a/fusiontables/fusiontables/table_fixed.html
+++ b/fusiontables/fusiontables/table_fixed.html
@@ -112,6 +112,7 @@
     <th style="text-align: center; width: 80px" rowspan="3">姓名</th>
     <th style="text-align: center; width: 80px" rowspan="3">班级</th>
     <th style="text-align: center" colspan="10">成绩</th>
+    <th style="text-align: center; width: 80px" rowspan="3">成绩11</th>
 </tr>
 <tr>
     <th style="text-align: center" colspan="3">主科</th>
@@ -146,6 +147,8 @@
     <td>8</td>
     <td>91</td>
     <td>526</td>
+     <td>526</td>
+
 </tr>
 <tr>
     <td>学生32</td>
@@ -160,6 +163,7 @@
     <td>8</td>
     <td>91</td>
     <td>526</td>
+     <td>526</td>
 </tr>
 <tr>
     <td>学生32</td>
