--- a/handsontable/handsontable_pagination.html
+++ b/handsontable/handsontable_pagination.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" media="screen" href="http://handsontable.com/dist/handsontable.full.css">
-    <script src="http://handsontable.com/dist/handsontable.full.js"></script>
-</head>
+   <!-- <script src="http://handsontable.com/dist/handsontable.full.js"></script>-->
+     <script src="res/libs/handsontable.js" type="text/javascript"></script>
 <body>
 <div id="example"></div>
 <div class="pagination">
@@ -19,6 +19,7 @@
     <a href="#8">8</a>
 </div>
 </body>
+<script type="text/javascript" src="res/libs/jquery.js"></script>
 <script type="text/javascript">
     var getData = (function () {
         var data = [
@@ -63,9 +64,25 @@
        // columnSorting:true,
         manualColumnMove: true,//拖拉行列
         manualRowMove: true,//拖拉行列
-        colHeaders: true
+        colHeaders: true,
+         beforeRender: function() {
+                       $('#header-grouping').remove();
+                        var elem = $('table.htCore thead, table.htBlockedRows thead');
+                        if(elem.find('tr').length > 1)
+                            $(elem.find('tr')[0]).remove(); //remove already existing header
+                    },
+        afterRender: function () {                          
+                    //add extra header manually
+                  /*  $('table.htCore thead, table.htBlockedRows thead').prepend('<tr><th colspan=1>.</th><th colspan=5> Group 1</th><th colspan=3> Group 2</th></tr>');*/
+
+                    var newHeaderRow = '<tr><th colspan=1>.</th><th colspan=5> Group 1</th><th colspan=3> Group 2</th></tr>'
+                     window.setTimeout(function() {
+                         $('table.htCore').find('thead').find('tr').before('<tr class="header-grouping">' + newHeaderRow + '</tr>');
+              }, 0);
+            } 
     });
 
+   
     Handsontable.Dom.addEvent(window, 'hashchange', function (event) {
         hot.loadData(getData());
     });
