--- a/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
@@ -4,37 +4,27 @@
     <meta charset="UTF-8">
     <title></title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="res/css/data_analysis.css"/>
-    <link rel="stylesheet" href="res/css/style.css"/>
 
+    <link rel="stylesheet" href="res/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="../themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="../themes/icon.css">
     <link rel="stylesheet" type="text/css" href="../demo/demo.css">
-    <!-- Latest compiled and minified JavaScript -->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
-
+    <link rel="stylesheet" href="res/css/data_analysis.css"/>
 </head>
 <body>
-<div class="container_div">
+<div class="container_div" ms-controller="test">
     <div class="leftbar">
         <section class="section_left">
             <h2 class="leftbar_title">维度</h2>
             <div class="section_detail_cont">
                 <ul class="section_ul" id="dimension_sec">
-                    <li>维度1</li>
-                    <li>维度2</li>
-                    <li>维度3</li>
-                    <li>维度v</li>
+                    <li ms-repeat-el="data.dimension" ms-attr-id={{el.id}}>{{el.label}}</li>
                 </ul>
 
-                <ul class="section_ul new_sec" id="new_dimension_sec">
-                    <li>维度new</li>
-                    <li>维度new</li>
-                    <li>维度3</li>
-                    <li>维度v</li>
+                <ul class="section_ul new_sec" id="new_dimension_sec" ms-each-el="data.dimension_new">
+                    <li ms-attr-id="{{el.id}}">{{el.label}}</li>
                 </ul>
             </div>
-
 
             <h2 class="leftbar_title">度量</h2>
             <div class="section_detail_cont">
@@ -55,13 +45,73 @@
         </section>
     </div>
     <div class="rightbar">
-        <div class="tabs_wrap">
-            <ul class="nav nav-tabs nav-justified">
-                <li role="presentation" class="active"><a href="#">访问分析 </a></li>
-                <li role="presentation"><a href="#">+</a></li>
-            </ul>
+        <div id="tab-tools"  >
+            <span>{{test1}}</span>
+            <a href="#" class="easyui-linkbutton" plain="true" title="click me to add new analysis" iconCls="icon-add" id="addnew_analysis" ms-click="one"></a>
+        </div>
 
-            <table class="easyui-datagrid" style="width:700px;height:250px"
+        <div id="tt" class="easyui-tabs" style="width:100%;height:250px;">
+            <div title="Tab1" style="padding:20px;" data-options="closable:true" >
+
+                <div class="input-div">
+                    <span class="input-label">列</span>
+                    <div class="input-content">dfsfds</div>
+                    <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
+                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" style="width: 27px; height: 27px;"></a></span>
+                    <input type="hidden" id="column_value" >
+                </div>
+
+                <div class="input-div">
+                    <span class="input-label">行</span>
+                    <div class="input-content">dfsfds</div>
+                    <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
+                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" style="width: 27px; height: 27px;"></a></span>
+                    <input type="hidden" id="row_value" >
+                </div>
+
+
+            </div>
+            <div title="Tab2" data-options="closable:true" style="overflow:auto;padding:20px;">
+                tab2fdsfds
+            </div>
+            <div title="Tab3" data-options="closable:true" >
+                tab3fdsfds
+            </div>
+            <div title="+"  style="display:none;">
+                +
+            </div>
+        </div>
+
+
+
+        <div class="tabs-wrap" id="tabs_wrap">
+            <ul class="tabs" style="height: 27px;">
+                <li class="tabs-selected tabs-first">
+                    <a class="tabs-inner">
+                        <span class="tabs-title">welcome</span>
+                        <span class="tabs-icon"></span>
+                    </a>
+                </li>
+
+                <li class=" tabs-inner ">
+                    <a class="tabs-inner">
+                        <span class="tabs-title">welcome1</span>
+                        <span class="tabs-icon"></span>
+                    </a>
+                </li>
+
+                <li class=" tabs-inner tabs-last">
+                    <a class="tabs-inner">
+                        <span class="tabs-title">+</span>
+                        <span class="tabs-icon"></span>
+                    </a>
+                </li>
+
+
+            </ul>
+        </div>
+
+            <table class="easyui-datagrid" style="width:700px;height:250px;margin-top:10px;"
                    data-options="rownumbers:true,singleSelect:true,url:'../demo/datagrid/datagrid_data1.json',method:'get'">
                 <thead>
                 <tr>
@@ -82,12 +132,25 @@
     </div>
 </div>
 
-
-
 </body>
-<!--<script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script>-->
+
+<!--TODO avalon template tab_panel_temp-->
+<script type="avalon" id="tab_panel_temp">
+            here, {{ 3 + 6 * 5  }}
+</script>
+
+<script type="text/javascript" src="res/local/mockdata.js"></script>
+<script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="res/libs/jquery.panel.js"></script>
+<script type="text/javascript" src="res/libs/jquery.datagrid.js"></script>
 <!--<script type="text/javascript" src="res/libs/require.js"></script>-->
 <script type="text/javascript" src="res/libs/avalon.js"></script>
 <script type="text/javascript" src="res/js/main.js"></script>
 <script type="text/javascript" src="res/js/data_analysis.js"></script>
+<script type="text/javascript">
+/*    var vm = avalon.define({
+        $id:   "test",
+        test1: "点击测试按钮没反应 绑定失败"
+    });*/
+</script>
 </html>
