--- a/handsontable/handsontable_pagination.html
+++ b/handsontable/handsontable_pagination.html
@@ -66,23 +66,24 @@
         manualRowMove: true,//拖拉行列
         colHeaders: true,
          beforeRender: function() {
+                        console.log("beforeRender")
                        $('#header-grouping').remove();
-                        var elem = $('table.htCore thead, table.htBlockedRows thead');
+                     /*   var elem = $('table.htCore thead, table.htBlockedRows thead');
                         if(elem.find('tr').length > 1)
-                            $(elem.find('tr')[0]).remove(); //remove already existing header
+                            $(elem.find('tr')[0]).remove(); //remove already existing header*/
                     },
-        afterRender: function () {                          
+        afterRender: function () {
                     //add extra header manually
                   /*  $('table.htCore thead, table.htBlockedRows thead').prepend('<tr><th colspan=1>.</th><th colspan=5> Group 1</th><th colspan=3> Group 2</th></tr>');*/
-
-                    var newHeaderRow = '<tr><th colspan=1>.</th><th colspan=5> Group 1</th><th colspan=3> Group 2</th></tr>'
+                    console.log("afterRender");
+                    var newHeaderRow = '<th colspan=1>.</th><th colspan=5> Group 1</th><th colspan=3> Group 2</th></tr><tr><th colspan=1>A1</th><th > A2</th><th > A4</th><th colspan=1>A1</th><th > A2</th><th > A4</th><th colspan=1>A1</th><th > A2</th><th > A4</th>'
                      window.setTimeout(function() {
                          $('table.htCore').find('thead').find('tr').before('<tr class="header-grouping">' + newHeaderRow + '</tr>');
               }, 0);
-            } 
+            }
     });
 
-   
+
     Handsontable.Dom.addEvent(window, 'hashchange', function (event) {
         hot.loadData(getData());
     });
