--- a/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
@@ -18,11 +18,10 @@
             <h2 class="leftbar_title">维度</h2>
             <div class="section_detail_cont">
                 <ul class="section_ul" id="dimension_sec">
-                    <li ms-repeat-el="data.dimension" ms-attr-id={{el.id}}>{{el.label}}</li>
+                    <li  ms-repeat="data.dimension" ms-if-loop="el"   ms-attr-id={{el.id}}>{{el.label}}</li> <!--ms-repeat-el="data.dimension"-->
                 </ul>
-
-                <ul class="section_ul new_sec" id="new_dimension_sec" ms-each-el="data.dimension_new">
-                    <li ms-attr-id="{{el.id}}">{{el.label}}</li>
+                <ul class="section_ul new_sec" id="new_dimension_sec"  ms-if="data.dimension_new.length"><!--ms-each-el="data.dimension_new"-->
+                    <li ms-repeat="data.dimension_new" ms-if-loop="el"   ms-attr-id="{{el.id}}">{{el.label}}</li>
                 </ul>
             </div>
 
@@ -46,8 +45,7 @@
     </div>
     <div class="rightbar">
         <div id="tab-tools"  >
-            <span>{{test1}}</span>
-            <a href="#" class="easyui-linkbutton" plain="true" title="click me to add new analysis" iconCls="icon-add" id="addnew_analysis" ms-click="one"></a>
+            <a href="#" class="easyui-linkbutton" plain="true" title="click me to add new analysis" iconCls="icon-add" id="addnew_analysis" ms-click="addtab"></a>
         </div>
 
         <div id="tt" class="easyui-tabs" style="width:100%;height:250px;">
@@ -55,21 +53,22 @@
 
                 <div class="input-div">
                     <span class="input-label">列</span>
-                    <div class="input-content">dfsfds</div>
+                    <div class="input-content dimension-content" data-type="column">
+                        <span ms-if="!data.selected_den.column || !data.selected_den.column.length" class="tips">拖动维度到这里，增加列</span>
+                        <span class="selected-dimension" ms-repeat-el="data.selected_den.column" ms-attr-id={{el.id}}>{{el.name}}</span>
+                    </div>
                     <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
-                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" style="width: 27px; height: 27px;"></a></span>
+                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
                     <input type="hidden" id="column_value" >
                 </div>
 
                 <div class="input-div">
                     <span class="input-label">行</span>
-                    <div class="input-content">dfsfds</div>
+                    <div class="input-content dimension-content" data-type="row">dfsfds</div>
                     <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" style="width: 27px; height: 27px;"></a></span>
                     <input type="hidden" id="row_value" >
                 </div>
-
-
             </div>
             <div title="Tab2" data-options="closable:true" style="overflow:auto;padding:20px;">
                 tab2fdsfds
@@ -111,7 +110,7 @@
             </ul>
         </div>
 
-            <table class="easyui-datagrid" style="width:700px;height:250px;margin-top:10px;"
+            <table class="easyui-datagrid" style="width:100%;height:250px;margin-top:10px;"
                    data-options="rownumbers:true,singleSelect:true,url:'../demo/datagrid/datagrid_data1.json',method:'get'">
                 <thead>
                 <tr>
@@ -140,6 +139,7 @@
 </script>
 
 <script type="text/javascript" src="res/local/mockdata.js"></script>
+<script type="text/javascript" src="res/libs/underscore-min.js"></script>
 <script type="text/javascript" src="res/libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="res/libs/jquery.panel.js"></script>
 <script type="text/javascript" src="res/libs/jquery.datagrid.js"></script>
